# wigcpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
benchmarks/: 3j_benchmark.cpp  CMakeLists.txt
cmake/: CheckCompileFeature.cmake  ConfigureLibCXX.cmake  OptionHandler.cmake
config/: wigcpp_config.h
examples/standalone/: CMakeLists.txt  test.c  test.cpp  test.f90
include/internal/: big_int.hpp  big_int_ops.hpp  big_int_view.hpp  calc.hpp  definitions.hpp  error.hpp  global_pool.hpp  nothrow_allocator.hpp  pexpo_eval_ctx.hpp  prime_factor.hpp  prime_ops.hpp  templates.hpp  tmp_pool.hpp  uniform_jagged_matrix.hpp  vector.hpp
include/wigcpp/: wigcpp.h  wigcpp.hpp
licenses/: COPYING.LESSER
src/: big_int.cpp  big_int.hpp  c_wrap.cpp  calc.cpp  calc.hpp  definitions.hpp  error.cpp  error.hpp  factor_pool.hpp  global_pool.cpp  global_pool.hpp  multi_word_int.hpp  nothrow_allocator.hpp  pexpo_eval_ctx.cpp  pod_vector.hpp  prime_factor.cpp  prime_factor.hpp  templates.hpp  tmp_pool.cpp  tmp_pool.hpp  vector.hpp
src/fortran/: interface.f90
test/: CMakeLists.txt  test_big_int.cpp  test_mwi.cpp  test_prime_factor.cpp  test_vector.cpp  test_xj_symbol.cpp
tests/: CMakeLists.txt  test_big_int.cpp  test_prime_factor.cpp  test_vector.cpp  test_xj_multi_thread.cpp  test_xj_symbol.cpp
